<resources>
    <string name="app_name">Fragment</string>
    <string name="api_key">b0edd780092adcc23a05e64c724d6e88</string>
    <string name="base_path_poster">https://image.tmdb.org/t/p/w342/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="my_profile">My Profile</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No HP</string>
    <string name="_082141730797">082141730797</string>
    <string name="nanda_adisaputra">Nanda Adisaputra</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="image">image</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="android_developer">Android Developer</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="data_student">Data Student</string>
    <string name="tambah_data_siswa">Tambah Data Siswa</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="usia">Usia</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="peminatan_kelas">Peminatan Kelas</string>
    <string name="pilih">Pilih</string>
    <string name="kelas_pilihan">Kelas Pilihan</string>
    <string name="foto_siswa">Foto Siswa</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="simpan">Simpan</string>
    <string name="alamat">Alamat</string>
    <string name="detail_siswa">Detail Siswa</string>
    <string name="jurusan">Jurusan</string>
    <string name="update">UPDATE</string>
    <string name="hapus">HAPUS</string>
    <string name="sekolah">Sekolah</string>
    <string name="tahun_lulus">Tahun Lulus</string>
    <string name="universitas">Universitas</string>
    <string name="jurusan_kuliah">Jurusan Kuliah</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="universitas_semarang">Universitas Semarang</string>
    <string name="ipa">IPA</string>
    <string name="_2014">2014</string>

    <!--    Sesuai dengan tema yang kalian gunakan, ex. movie -->
    <string-array name="movie_name">
        <item>Nanda Adi</item>
        <item>Affandy</item>
        <item>Dila</item>
        <item>Didi</item>
        <item>Cica</item>
        <item>Asni</item>
        <item>Indri</item>
        <item>Nugroho</item>
        <item>Afi</item>
        <item>Arga</item>
        <item>Asroi</item>
        <item>Bagus</item>
    </string-array>

    <array name="movie_image">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_bohemian</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="transaksi">Transaksi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="smk_coding_batch_1_2019">SMK CODING BATCH 1 2019</string>
    <string name="hallo_ini_fragment_info">Hallo Ini Fragment Info</string>
    <string name="hallo_ini_fragment_history">Hallo Ini Fragment History</string>
    <string name="hello_ini_fragment_tiga">Hello Ini Fragment Tiga</string>
    <string name="hallo_ini_fragment_dua">Hallo ini Fragment Dua</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="movie">Movie</string>
</resources>
