<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add_circle"
                android:title="@string/data_student"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/map"/>
        <item
                android:id="@+id/nav_transaksi"
                android:icon="@drawable/ic_shopping"
                android:title="@string/transaksi"/>
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_local_movies"
            android:title="@string/movie"/>
        <item
                android:id="@+id/nav_pengaturan"
                android:icon="@drawable/ic_settings"
                android:title="@string/pengaturan"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send"/>
        </menu>
    </item>

</menu>
