<?xml version="1.0" encoding="utf-8"?>
<!--TODO 5 Mengatur tampilan detail siswa-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.DetailStudentActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/detail_siswa"
                  android:textSize="18sp"
                  android:layout_gravity="center_horizontal"/>

        <ImageView
                android:id="@+id/dsa_iv_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/image"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/placeholder_user"/>

        <!--Nama-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:text="@string/nama"
                      android:textSize="14sp"/>

            <TextView
                    android:id="@+id/dsa_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Nama Siswanya siapa"/>

        </LinearLayout>

        <!--Usia-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:text="@string/usia"
                      android:textSize="14sp"/>

            <TextView
                    android:id="@+id/dsa_tv_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Usia Siswanya berapa"/>

        </LinearLayout>

        <!--Alamat-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:text="@string/alamat"
                      android:textSize="14sp"/>

            <TextView
                    android:id="@+id/dsa_tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Alamat siswanya mana"/>

        </LinearLayout>

        <!--Jurusan-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView android:layout_width="100dp"
                      android:layout_height="wrap_content"
                      android:text="@string/jurusan"
                      android:textSize="14sp"/>

            <TextView
                    android:id="@+id/dsa_tv_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Jurusan yang dipilih apa"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/dsa_btn_update"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                style="?buttonBarButtonStyle"
                android:textColor="@android:color/white"
                android:text="@string/update"
                android:background="@android:color/holo_blue_dark"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"/>

        <Button
                android:id="@+id/dsa_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                style="?buttonBarButtonStyle"
                android:text="@string/hapus"
                android:textColor="@android:color/white"
                android:layout_marginStart="5dp"
                android:background="@color/red"
                android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>